added button to randomize

--- a/background_generator/index.html
+++ b/background_generator/index.html
@@ -2,6 +2,12 @@
 <html>
   <head>
     <title>Gradient Background</title>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body id="gradient">
@@ -9,6 +15,7 @@
     <input class="color1" type="color" name="color1" value="#00ff00" />
     <input class="color2" type="color" name="color2" value="#ff0000" />
     <h2>Current CSS Background</h2>
+    <button class="btn btn-light">Randomize!!</button><br /><br />
     <h3></h3>
     <script type="text/javascript" src="script.js"></script>
   </body>
